tests/error/array_errors/array_index_linear_cx_duplicate_index.err
Error: Linearity violation (at $FILE:14:37)
   | 
12 | def main() -> None:
13 |     external_reg = array((qubit() for _ in range(2)))
14 |     cx(external_reg[0], external_reg[0])
   |                                      ^ Linear value at index 0 used multiple times

Note:
   | 
13 |     external_reg = array((qubit() for _ in range(2)))
14 |     cx(external_reg[0], external_reg[0])
   |                     -

Note: First use was here

Guppy compilation failed due to 1 previous error
